Coy theme: Fix issue with defined height of the <pre> tag
* The max-height on the `<pre>` is if there is no defined height.

The definitions of the code ensure, that the contents stay inside the `<pre>`. The `width: 100%` is need if there is no defined height of the `<pre>`, see http://stackoverflow.com/questions/14262938/child-with-max-height-100-overflows-parent.

--- a/themes/prism-coy.css
+++ b/themes/prism-coy.css
@@ -41,10 +41,12 @@ pre[class*="language-"] {
   background-size: 3em 3em;
   background-origin:content-box;
   overflow: visible;
+  max-height: 30em;
 }
 
 code[class*="language"] {
-  max-height: 30em;
+  max-height: inherit;
+  height: 100%;
   padding: 0 1em;
   display:block;
   overflow: auto;
